--- a/initscript.cfg
+++ b/initscript.cfg
@@ -13,12 +13,12 @@
 
 
 
-#PAPOU = Start Onject Tracker
+#Start Onject Tracker
 #setmapping2 YUYV 320 240 60.0 JeVois ObjectTracker
 #setmapping2 YUYV 320 240 30.0 JeVois ObjectTracker
 #streamon
 
-#PAPOU = START ARUCOTRACKER
+#START ARUCOTRACKER
 #setmapping2 YUYV 640 480 30.0 JeVois DemoArUco
 setmapping2 YUYV 1280 1024 15.0 JeVois DemoArUco
 setpar serout Hard
