--- a/videomappings.cfg
+++ b/videomappings.cfg
@@ -131,9 +131,9 @@ MJPG 88 72 120.0 RGB565 88 72 120.0 JeVois Convert
 #RGB565 160 120 60.0 RGB565 160 120 60.0 JeVois PassThrough
 #RGB565 88 72 120.0 RGB565 88 72 120.0 JeVois PassThrough
 
-#YUYV 1280 1024 7.5 YUYV 1280 1024 7.5 JeVois PassThrough
+YUYV 1280 1024 7.5 YUYV 1280 1024 7.5 JeVois PassThrough
 #YUYV 640 480 30.0 YUYV 640 480 30.0 JeVois SaveVideo
-#YUYV 640 480 19.6 YUYV 640 480 19.6 JeVois PassThrough
+YUYV 640 480 19.6 YUYV 640 480 19.6 JeVois PassThrough
 #YUYV 640 480 12.0 YUYV 640 480 12.0 JeVois PassThrough
 #YUYV 640 480 8.3 YUYV 640 480 8.3 JeVois PassThrough
 #YUYV 640 480 7.5 YUYV 640 480 7.5 JeVois PassThrough
@@ -176,7 +176,7 @@ YUYV 640 312 50.0 YUYV 320 240 50.0 JeVois DemoSalGistFaceObj
 ####################################################################################################
 
 YUYV 640 360 30.0 YUYV 320 240 30.0 JeVois JeVoisIntro
-YUYV 640 480 30.0 YUYV 320 240 30.0 JeVois JeVoisIntro
+#YUYV 640 480 30.0 YUYV 320 240 30.0 JeVois JeVoisIntro
 
 ####################################################################################################
 ### Demo: Saliency and gist
@@ -278,14 +278,15 @@ GREY 176 144 120.0 YUYV 176 144 120.0 JeVois DemoEyeTracker
 ### Demo: ArUco augmented-reality markers detection and decoding
 ####################################################################################################
 
-NONE 0 0 0.0 YUYV 320 240 30.0 JeVois DemoArUco
+NONE 0 0 0.0 YUYV 640 480 30.0 JeVois DemoArUco
+NONE 0 0 0.0 YUYV 1280 1024 15.0 JeVois DemoArUco
 YUYV 320 260 30.0 YUYV 320 240 30.0 JeVois DemoArUco
 YUYV 640 500 20.0 YUYV 640 480 20.0 JeVois DemoArUco
-
+#YUYV 1280 1024 7.5 YUYV 1280 1024 7.5 JeVois DemoArUco
 ####################################################################################################
 ### Edge detection using Canny
 ####################################################################################################
-
+GREY 1280 1024 15.0 YUYV 1280 1024 15.0 JeVois EdgeDetection
 GREY 640 480 29.0 YUYV 640 480 29.0 JeVois EdgeDetection
 GREY 320 240 59.0 YUYV 320 240 59.0 JeVois EdgeDetection
 #GREY 176 144 119.0 YUYV 176 144 119.0 JeVois EdgeDetection
@@ -301,7 +302,9 @@ GREY 320 960 45.0 YUYV 320 240 45.0 JeVois EdgeDetectionX4
 ####################################################################################################
 
 NONE 0 0 0.0 YUYV 320 240 60.0 JeVois ObjectTracker
-YUYV 320 254 60.0 YUYV 320 240 60.0 JeVois ObjectTracker
+#YUYV 320 254 60.0 YUYV 320 240 60.0 JeVois ObjectTracker
+#PAPOUMOD
+YUYV 320 254 30.0 YUYV 320 240 30.0 JeVois ObjectTracker
 
 ####################################################################################################
 ### GPU color image processing demo
@@ -343,6 +346,6 @@ YUYV 640 300 10.0 YUYV 320 240 10.0 JeVois BurnTest
 ### Python tests
 ####################################################################################################
 
-YUYV 640 480 15.0 YUYV 640 480 15.0 JeVois PythonTest
+#YUYV 640 480 15.0 YUYV 640 480 15.0 JeVois PythonTest
 GREY 640 480 20.0 YUYV 640 480 20.0 JeVois PythonOpenCV
 YUYV 352 288 30.0 YUYV 352 288 30.0 JeVois PythonSandbox
